--- a/src/styles/tab.css
+++ b/src/styles/tab.css
@@ -23,12 +23,6 @@
 
 .tab--active {
     color: var(--color-text);
+    border-bottom: 4px solid var(--color-bank);
 }
 
-.fleeca .tab--active {
-    border-bottom: 4px solid var(--color-fleeca);
-}
-
-.maze .tab--active {
-    border-bottom: 4px solid var(--color-maze);
-}
