--- a/src/styles/favorite-account.css
+++ b/src/styles/favorite-account.css
@@ -1,5 +1,9 @@
 .favorite-account {
     box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
     height: auto;
     border-bottom: 1px solid var(--color-border);
@@ -15,7 +19,7 @@
 
 .favorite-account__section {
     box-sizing: border-box;
-    width: auto;
+    flex: 1 1 0;
     height: auto;
     padding-top: 10px;
     padding-bottom: 10px;
