--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -18,6 +18,10 @@
     letter-spacing: 1px;
 }
 
+.button--mr {
+    margin-right: -9px;
+}
+
 .button--large-icon {
     display: flex;
     width: 48px;
@@ -26,8 +30,8 @@
 
 .button--small-icon {
     display: flex;
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
 }
 
 .button__icon {
@@ -41,8 +45,8 @@
 }
 
 .button--small-icon > .button__icon {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
 }
 
 /*------------------------------------*\
@@ -86,6 +90,46 @@
 
 .button--disabled > .button__icon {
     color: var(--color-text-alt);
+}
+
+/*------------------------------------*\
+  #Button-subtle
+\*------------------------------------*/
+
+.button--subtle > .button__icon {
+    color: var(--color-text-alt);
+}
+
+.button--subtle:hover {
+    background-color: var(--color-border);
+}
+
+.button--subtle:hover > .button__icon {
+    color: #fff;
+}
+
+/*------------------------------------*\
+  #Button-success
+\*------------------------------------*/
+
+.button--success {
+    background-color: var(--color-up);
+}
+
+.button--success > .button__icon {
+    color: #fff;
+}
+
+/*------------------------------------*\
+  #Button-error
+\*------------------------------------*/
+
+.button--error {
+    background-color: var(--color-down);
+}
+
+.button--error > .button__icon {
+    color: #fff;
 }
 
 /*------------------------------------*\
