--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,7 +1,8 @@
 .typography {
     box-sizing: border-box;
     display: block;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     font-family: inherit;
     line-height: 1;
 }
