--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -6,12 +6,7 @@
 .dropdown__header {
     box-sizing: border-box;
     list-style: none;
-    font-size: 12px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.6px;
     color: var(--color-text-alt);
-    line-height: 1;
     margin: 0 0 8px 0;
     cursor: pointer;
     text-align: end;
@@ -21,10 +16,10 @@
     color: var(--color-bank);
 }
 
-.dropdown__body {
+.dropdown__content {
     box-sizing: border-box;
     position: absolute;
-    bottom: 0;
+    bottom: -0.8rem;
     right: 0;
     transform: translateY(100%);
     z-index: 100;
