--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -53,6 +53,12 @@
     color: var(--color-text);
 }
 
+.typography--body-medium {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--color-text);
+}
+
 .typography--body-small {
     font-size: 1.4rem;
     font-weight: 600;
