--- a/src/styles/view.css
+++ b/src/styles/view.css
@@ -12,24 +12,6 @@
 
 .view__button {
     position: absolute;
-    left: 12px;
-    bottom: 8px;
-    display: flex;
-    width: 48px;
-    height: 48px;
-    margin: 0;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.view__button-icon {
-    margin: auto;
-    width: 24px;
-    height: 24px;
-    color: var(--color-text-alt);
-}
-
-.view__button:hover > .view__button-icon {
-    color: var(--color-text);
+    left: 0;
+    bottom: 0;
 }
