--- a/src/styles/favorite-account.css
+++ b/src/styles/favorite-account.css
@@ -45,6 +45,12 @@
     background-color: var(--color-bg);
 }
 
+.favorite-account__input::placeholder {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--color-text-placeholder);
+}
+
 .favorite-account__input:focus {
     outline: none;
     border: 1px solid var(--color-bank);
