--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -40,8 +40,8 @@
     height: 48px;
     margin: 0;
     padding: 0 16px;
-    border: 1px solid var(--color-border);
-    background-color: var(--color-fg);
+    border: 0.1rem solid var(--color-form-input-border);
+    background-color: var(--color-form-input);
 }
 
 .form__input:focus {
