--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -43,7 +43,7 @@
 
 .grid__section--with-border {
     padding-bottom: 24px;
-    border-bottom: 1px solid var(--color-border-on-bg);
+    border-bottom: 1px solid var(--color-grid-section-divider);
 }
 
 .grid__section--align-bottom {
