--- a/src/styles/log.css
+++ b/src/styles/log.css
@@ -4,7 +4,7 @@
     height: auto;
     padding-top: 16px;
     padding-bottom: 16px;
-    border-bottom: 1px solid var(--color-border);
+    border-bottom: 1px solid var(--color-log-divider);
 }
 
 .log:last-child {
@@ -39,7 +39,7 @@
     width: 48px;
     height: 48px;
     margin-right: 16px;
-    background-color: var(--color-icon-bg);
+    background-color: var(--color-log-icon-background);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 24px;
