--- a/src/styles/tab.css
+++ b/src/styles/tab.css
@@ -7,16 +7,17 @@
     border-top: 4px solid transparent;
     border-bottom: 4px solid transparent;
     background-color: transparent;
+    color: var(--color-tab);
     cursor: pointer;
 }
 
 .tab:focus-visible {
     outline: none;
-    color: var(--color-text);
+    color: var(--color-tab-active);
 }
 
 .tab--active {
-    color: var(--color-text);
+    color: var(--color-tab-active);
     border-bottom: 4px solid var(--color-bank);
 }
 
