ref: rework icons

--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -22,7 +22,7 @@
     box-sizing: border-box;
     display: block;
     width: 2rem;
-    height: auto;
+    height: 2rem;
     margin-right: 0.8rem;
 }
 
