--- a/src/styles/top-app-bar.css
+++ b/src/styles/top-app-bar.css
@@ -40,8 +40,8 @@
 .top-app-bar__logo {
     box-sizing: border-box;
     display: block;
-    width: 36px;
-    height: auto;
+    width: 3.6rem;
+    height: 3.6rem;
     margin-right: 16px;
     pointer-events: none;
     color: var(--color-bank);
